--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@testing-library/react-native": "^12.4.3",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-safe-area-context": "^4.8.2",
@@ -25,6 +26,8 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.3",
     "@react-native/typescript-config": "0.73.1",
+    "@testing-library/jest-dom": "^6.3.0",
+    "@types/jest": "^29.5.11",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
